# TrickyClip

./: .gitignore  ARCHITECTURE.md  DRIVE-WORKFLOW-SETUP.md  GOOGLE-DRIVE-SETUP.md  NEXT-STEPS.md  PRODUCTION-READY-GUIDE.md  README.md  TESTING-GUIDE.md  WHATS-FIXED.md  quick-deploy.sh
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2025_12_02_0001_initial_schema_with_ml_features.py  2025_12_10_0001_add_highlight_windows.py  2025_12_10_1700_oauth_tokens.py
backend/app/: main.py  sync_worker.py  worker.py
backend/app/api/v1/: admin.py  auth.py  clips.py  health.py  jobs.py  people.py  sort.py  tricks.py  upload.py  upload_chunked.py  videos.py  ws.py
backend/app/core/: config.py  db.py  errors.py  logging_config.py
backend/app/detection/: __init__.py  config.py  highlight_model.py  stage1_audio.py  stage1_candidates.py  stage1_motion.py
backend/app/ml_training/: __init__.py  negatives.py
backend/app/models/: __init__.py  clips.py  files.py  jobs.py  oauth.py  people.py  segments.py  tricks.py
backend/app/services/: detection.py  detection_ml.py  drive.py  drive_sync.py  ffmpeg.py  filenames.py  job_tracker.py  log_publisher.py  oauth_drive.py  queue.py  storage_manager.py
backend/app/video/: __init__.py  proxy_utils.py
backend/ml_training/: export_highlight_dataset.py
backend/ml_training/highlight_model/: README.md  dataset_loader.py  requirements.txt  train_movinet.py
backend/models/highlight/: README.md
backend/tests/: test_integration.py  test_ml_detection.py
deploy/: DEPLOY-CHECKLIST.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  GOOGLE-CLOUD-DEPLOY.md  backup-database.sh  cleanup-cron.sh  cleanup-vm-cache.sh  cloudflared-config.yml  deploy.sh  docker-compose.yml  (+9 more)
(+12 files in other folders)
